Trying out a completely new ProductControllerTest code.